<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectE"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Spinner
        android:id="@+id/elemSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/elemArray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterTemp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kOrC"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        
    <RadioButton android:id="@+id/radioKelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelvin"
        android:onClick="onRadioButtonClicked"/>
    
    <RadioButton android:id="@+id/radioCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view" 
        android:onClick="showElement"/>

</LinearLayout>
