<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ElementView" >

    <TextView
        android:id="@+id/elementName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elementN"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/accessibility"
        android:src="@drawable/aluminium" />
    
    <TextView
        android:id="@+id/tempK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempK"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
        android:id="@+id/tempValueK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     
    <TextView
        android:id="@+id/tempC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempC"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     
     <TextView
        android:id="@+id/tempValueC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   
    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/stateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>